welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:7: error: ';' expected but 'else' found.
  else if (litMessage()=="L")
  ^BDRBuggle:10: error: ';' expected but 'else' found.
  else if (litMessage()=="I")
  ^BDRBuggle:13: error: ';' expected but 'else' found.
  else if (litMessage()=="A")
  ^BDRBuggle:15: error: ';' expected but 'else' found.
  else if (litMessage()=="B")
  ^BDRBuggle:18: error: ';' expected but 'else' found.
  else if (litMessage()=="C")
  ^BDRBuggle:22: error: ';' expected but 'else' found.
  else if (litMessage()=="Z")
  ^BDRBuggle:24: error: ';' expected but 'else' found.
  else if (litMessage()=="Y")
  ^BDRBuggle:27: error: ';' expected but 'else' found.
  else if (litMessage()=="X")
  ^BDRBuggle:31: error: ';' expected but 'else' found.
  else danse=true
  ^